--- a/sections/references.bib
+++ b/sections/references.bib
@@ -311,3 +311,15 @@ keywords={decision theory;handwriting recognition;optical character recognition;
 doi={10.1109/ICDAR.1995.598994}, 
 ISSN={}, 
 month={Aug},}
+
+@misc{sklearn,
+title = {Scikit-learn},
+howpublished = {\url{http://scikit-learn.org/stable/}},
+month = {first visited in Aug},
+year = 2017 }
+
+@misc{keras,
+title = {Keras},
+howpublished = {\url{https://keras.io/}},
+month = {first visited in Oct},
+year = 2017 }
