--- a/sections/implementazione.tex
+++ b/sections/implementazione.tex
@@ -6,7 +6,7 @@ Di seguito sono elencati i dettagli implementativi delle singole entità, ed i p
 \section{Classificatore Random Forest}
 \label{imp:randomforest}
 Il classificatore Random Forest è stato implementato tramite l'uso della libreria python Scikit-learn \cite{sklearn}. 
-Al fine di avere un ambiente di testing facilmente fruibile, è stata creata una classe $MyClassifier$ in grado di gestire la serie di esperimenti effettuata sul classificatore, al fine di testare i differenti parametri di funzionamento e la composizione delle features del dataset. in figura \ref{fig:uml_randomforest} è mostra
+Al fine di avere un ambiente di testing facilmente fruibile, è stata creata una classe $MyClassifier$ in grado di gestire la serie di esperimenti effettuata sul classificatore. Tali esperimenti hanno permesso di testare i differenti parametri di funzionamento e la composizione delle features che compongo il dataset del classificatore. In figura \ref{fig:uml_randomforest} è mostrata la struttura della classe $MyClassifier$, la quale contiene le funzioni principali di inizializzazione, salvataggio e caricamento dei parametri, salvataggio e caricamento dei risultati oltre che alle funzioni necessarie per allenare il classificatore (funzione $fit$), eseguire cross-validation (funzione $cross\_validate$), produrre grafici di risultati ($classification\_report$ e $plot_AUC$) ed eseguire predizione su di una lista di domini in input (a fini di testing).
 
 \begin{figure}[!htb]
 	\centering
@@ -93,6 +93,14 @@ L'insieme di tali features è stato usato per generare un dataset contenente per
 
 Assieme a tale dataset è stato generato un vettore binario "\textit{target}" da cui il classificatore può verificare la categoria di appartenenza (malevolo o reale) di ogni dominio.
 
+\subsection{Ambiente di training}
+Durante la fase di training il dataset è stato mescolato e separato in due subset: \textit{train} e \textit{test}. Il subset di testing ha la dimensione pari al 10\% dell'intero dataset. 
+
+La fase di training è stata eseguita tramite la tecnica di convalida incrociata (\textit{k-fold cross validation}) in cui il dataset di training è stato separato in 10 subset (\textit{fold)} e ad ogni passo la \textit{k-esima} parte è stata usata come validazione per la fase di training. Questa tecnica evita il problema dell'overfitting, di cui generalmente soffrono i modelli di machine learning.
+
+Il restante subset di test, mai applicato nella fase di training, è stato utilizzato per valutare il modello del classificatore.
+
+
 \subsection{Parametri Classificatore}
 In particolare i parametri del classificatore utilizzato che sono stati modificati dal loro valore di default sono:
 \begin{itemize}
@@ -101,16 +109,15 @@ In particolare i parametri del classificatore utilizzato che sono stati modifica
 \item \textbf{\texttt{oob\_score}} = True. Implica l'uso di campioni \textit{out-of-bag} per ottenere una stima facilitata dell'errore. Con questa tecnica una parte del campione di stima viene esclusa per essere utilizzata come insieme di verifica.
 \end{itemize}
 
-\subsection{Ambiente di training}
-Durante la fase di training il dataset è stato mescolato e separato in due subset: \textit{train} e \textit{test}. Il subset di testing ha la dimensione pari al 10\% dell'intero dataset. 
-
-La fase di training è stata eseguita tramite la tecnica di convalida incrociata (\textit{k-fold cross validation}) in cui il dataset di training è stato separato in 10 subset (\textit{fold)} e ad ogni passo la \textit{k-esima} parte è stata usata come validazione per la fase di training. Questa tecnica evita il problema dell'overfitting, di cui generalmente soffrono i modelli di machine learning.
-
-il restante subset di test, mai applicato nella fase di training, è stato utilizzato per valutare il modello del classificatore.
-
-
 \section{Classificatore Neurale}
 \label{imp:classneurale}
+L'implementazione del classificatore neurale è stata eseguita in ambiente Python, con l'utilizzo della libreria Keras \cite{keras} per le reti neurali.
+Per motivi di semplicità si è scelto di copiare l'ambiente di testing definito per il classificatore Random Forest mostrato in figura  \ref{fig:uml_randomforest}. Tale classe permette di gestire i diversi esperimenti, utilizzati per decidere quale composizione del \textit{Multi Layer Perceptron}  (abbr. MLP) in base ai risultati sperimentali. 
+
+\subsection{Baseline}
+Come definito all'interno della sezione \ref{classificatorenninterno}, la composizione del MLP è stata decisa dopo un confronto tra tre modelli differenti nella conformazione
+
+\subsection{Dataset}
 
 \section{Autoencoder}
 \label{imp:autoencoder}
